[package]
name = "simple_docker_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
uuid = { version = "0.7", features = ["serde", "v4"] }
unshare = "0.7.0"
libc = "0.2.93"
nix = "0.22.0"